# Linear-Models-Dashboard

./: Dockerfile  compose.yaml  pyproject.toml
data/model_data/knn/: data.joblib.lzma
data/model_data/linear/: data.joblib.lzma
data/model_data/poly/: data.joblib.lzma
data/raw/: df_pca_test.parquet  df_pca_train.parquet  df_pca_val.parquet  raw_data.parquet
scripts/: fit_models.py  precompute.py
src/: app.py  utils.py
src/models/: knn.py  linear.py  poly.py
src/pages/: eda.py  lm.py
src/plots/: knn.py  linear.py  poly.py
