[project]
name = "linearmodelsdashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=4.4.0",
    "dash-bootstrap-components>=2.0.4",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "scikit-learn>=1.9.0",
    "statsmodels>=0.14.6",
]
