[project]
name = "linear-models-dashboard"
version = "0.1.0"
description = "A Analytical Dashboard of Popular Linear Regressión Models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=4.4.0",
    "dash-bootstrap-components>=2.0.4",
    "fastparquet>=2026.5.0",
    "joblib>=1.5.3",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
]

[dependency-groups]
dev = [
    "scikit-learn>=1.9.0",
    "statsmodels>=0.14.6",
]
